--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -7,11 +7,19 @@
 <body>
 
 <form action="/login" method="post">
+    登录<br>
     用户名: <input type="text" name="username"><br>
     密  码: <input type="password" name="password"><br>
     <input type="submit" value="登录">
 </form>
+<hr>
 
+<form th:action="@{/addPeople}" method="post">
+    注册<br>
+    用户名: <input type="text" name="username"><br>
+    密  码: <input type="password" name="password"><br>
+    <input type="submit" value="注册">
+</form>
 
 </body>
 </html>
